== Release 5.4.1.0 pre

    * Added "Microchip PIC12F1840 8-pin packages" (Sponsored by MGP, thank you very much.)


== Release 5.4.0.5

    * Refactor EEPROM RERSIST_ELEM for AVR

    * Fixed bug: LDmicro Forum - A problem with substracting 2 values #214
      ELEM_ADD & ELEM_SUB refactoring

    * Added "Atmel AVR ATmega1284 44-Pin packages"

    * Fixed PWM for AVR ATmega1284. Six PWM Channels are available.

    * Fixed AVR ATtiny85


== Release 5.4.0.4

    * Fixed the bug in ladder.h generated by version 5.4.0.x when compiling for AVR-GCC (double include).

    * PULSER instruction tested with ATmega2560 (both HEX->ASM and AVR-GCC compilers)
      PULSER instruction tested with PIC16F887 (both HEX->ASM and HI-TECH C compilers)
      See: https://github.com/LDmicro/LDmicro/wiki/PULSER

    * Fixed: Convert manual-es.txt from 65001 UTF-8 code page to 1252 code page


== Release 5.4.0.3

    * Modified menu Settings

    * Fixed lang-fr.txt

    * Some minor hotfixes


== Release 5.4.0.2

    * Fixed Microchip PIC16F887 44-TQFP UART, ISP,I2C pins.

    * Fixed Quad Encoder Output dialog Dir pin name.

    * Fixed Atmel AVR ATmega32U4 pins mapping for Arduino.

    * Fixed Spanish locale. Thank you very much, Paulino Cano.
      lang-es.txt, manual-es.txt updated.


== Release 5.4.0.1 String type support

    * Added
        "Atmel AVR ATmega32U4 44-Pin packages",
        "Atmel AVR ATmega32 44-Pin packages",
        "Atmel AVR ATmega328 32-Pin packages",
        "Atmel AVR ATtiny85 8-Pin packages",
        "Atmel AVR ATtiny85 20-Pin packages",
        "Microchip PIC16F1512 28-Pin SPDIP, SOIC, SSOP",
        "Microchip PIC16F1516 28-Pin SPDIP, SOIC, SSOP",
        "Microchip PIC16F1527 64-Pin packages",
        "Microchip PIC16F1824 14-Pin PDIP, SOIC, TSSOP",
        "Microchip PIC16F1827 18-Pin PDIP, SOIC",
        "Microchip PIC10F202 6-SOT",
        "Microchip PIC16F887 44-TQFP"

    * Added LIBRARIES_FOR\Pic16\UartLib.*
            LIBRARIES_FOR\AVR\UartLib.*