@@ -99,6 +99,7 @@ static int CountWidthOfElement(int which, void *any, int soFar)
         case ELEM_ONE_SHOT_RISING:
         case ELEM_ONE_SHOT_FALLING:
         case ELEM_ONE_SHOT_LOW:
+        case ELEM_ONE_DROP_RISING:
         case ELEM_OSC:
         case ELEM_EQU:
         case ELEM_NEQ:
@@ -1152,6 +1153,7 @@ static bool DrawLeaf(int which, ElemLeaf *leaf, int *cx, int *cy, bool poweredBe
 
         case ELEM_ONE_SHOT_RISING:
         case ELEM_ONE_SHOT_LOW:
+        case ELEM_ONE_DROP_RISING:
         case ELEM_ONE_SHOT_FALLING: {
             const char *ss1, *ss2;
             if(which == ELEM_ONE_SHOT_RISING) {
@@ -1169,6 +1171,11 @@ static bool DrawLeaf(int which, ElemLeaf *leaf, int *cx, int *cy, bool poweredBe
                 ss2 =
                     "[ \\_\x01"
                     "OSL\x02 \\_/ ]";
+            } else if(which == ELEM_ONE_DROP_RISING) {
+                ss1 = "    _   _   _ ";
+                ss2 =
+                    "[_/ \x01"
+                    "ODR\x02 \\_/ ]";
             } else
                 oops();
 
@@ -1180,10 +1187,10 @@ static bool DrawLeaf(int which, ElemLeaf *leaf, int *cx, int *cy, bool poweredBe
         }
         case ELEM_OSC: {
             const char *ss1, *ss2;
-            ss1 = "   _     _   _  ";
+            ss1 = "     _   _   ";
             ss2 =
-                "[_/ \x01"
-                "OSC\x02_/ \\_/ \\]";
+                "[\x01"
+                "OSC\x02/ \\_/ \\_]";
 
             CenterWithSpaces(*cx, *cy, ss1, poweredAfter, false);
             CenterWithWires(*cx, *cy, ss2, poweredBefore, poweredAfter);
